# sar-drone-project

./: .gitignore
YOLO_pkg/: GrabVideo.py  GrabVideoSims.py  yolo_notes.md
mavsdk_code/: CMakeLists.txt  main.cpp
ros2_ws/: .gitignore
ros2_ws/src/data_collection_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/data_collection_pkg/src/: DataCollectionNode.cpp
ros2_ws/src/drone_control_dir/: CMakeLists.txt  package.xml
ros2_ws/src/drone_control_dir/src/: notes.md  offboard_control1.cpp  offboard_control2.cpp  offboard_control3.cpp  traj_error.cpp
ros2_ws/src/gps_approx_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/gps_approx_pkg/src/: CalcGPSNode.cpp
ros2_ws/src/pixel_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pixel_msgs/msg/: PixelCoordinates.msg
